--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/ecommerce   # or your Atlas URI
-JWT_SECRET=super_secret_key_change_me
+MONGO_URI=mongodb://127.0.0.1:27017/ShoeVerse   # or your Atlas URI
+JWT_SECRET=shoeverse_secret_key
 JWT_EXPIRES=1d
