--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/ShoeVerse   # or your Atlas URI
+MONGO_URI=mongodb://127.0.0.1:27017/ShoeVerse   
 JWT_SECRET=shoeverse_secret_key
 JWT_EXPIRES=1d
+
+CLOUDINARY_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+
